--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/index.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/index.html
@@ -11,33 +11,26 @@
 
 <body ng-app="myApp">
 
-    <!-- ui-view is where our templates go -->
-    <div ui-view id="app-container"></div>
-    <div ui-view="navigation" id="nav-container"></div>
+<!-- ui-view is where our templates go -->
+<div ui-view id="app-container"></div>
+<div ui-view="navigation" id="nav-container"></div>
 
 
-    <!--EVENTUALLY SHOULD HAVE DIST. V WHERE THESE ARE UGLIFIED & COMBINED....-->
-    <!-- ////////////////////////////////////////////////
-        //////// LIBS -->
-    <script type="text/javascript" src="scripts/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/angular.js"></script>
-    <script type="text/javascript" src="scripts/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="scripts/angular-material.js"></script>
+<!-- ////////////////////////////////////////////////
+    //////// LIBS -->
+<script type="text/javascript" src="scripts/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/angular.js"></script>
+<script type="text/javascript" src="scripts/angular-touch.js"></script>
+<script type="text/javascript" src="scripts/angular-ui-router.min.js"></script>
 
-    <!-- <script type="text/javascript" src="scripts/angular-animate.min.js"></script>
-    <script type="text/javascript" src="scripts/angular-aria.min.js"></script>
-    <script type="text/javascript" src="scripts/angular-touch.min.js"></script> -->
 
 
 <!-- ////////////////////////////////////////////////
     //////// SCRIPTS -->
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/router.js"></script>
-    <script type="text/javascript" src="js/controllers/main.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/router.js"></script>
+<script type="text/javascript" src="js/controllers/main.js"></script>
 
-    <!--<script type="text/javascript" src="js/controllers/main.js"></script>-->
-    <!--<script type="text/javascript" src="js/controllers/navigation.js"></script>-->
-    <!--<script type="text/javascript" src="js/services/udp-factory.js"></script>-->
 
 </body>
 </html>
