frontend fixes + UDP on ios tested working

--- a/WIP-EXAMPLES/01_BASIC_ANGULAR_CTRL_APP/index.html
+++ b/WIP-EXAMPLES/01_BASIC_ANGULAR_CTRL_APP/index.html
@@ -19,13 +19,17 @@
     <!-- ////////////////////////////////////////////////
         //////// LIBS -->
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/angular.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.4/hammer.min.js"></script>
+    <script type="text/javascript" src="http://code.angularjs.org/1.4.7/angular-touch.min.js"></script>
+
+    <!--<script type="text/javascript" src="scripts/angular.js"></script>-->
     <script type="text/javascript" src="scripts/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="scripts/angular-material.js"></script>
+    <!--<script type="text/javascript" src="scripts/angular-material.js"></script>-->
 
     <!--<script type="text/javascript" src="scripts/angular-animate.min.js"></script>-->
     <!--<script type="text/javascript" src="scripts/angular-aria.min.js"></script>-->
-    <!--<script type="text/javascript" src="scripts/angular-touch.min.js"></script>-->
+    <script type="text/javascript" src="scripts/angular-touch.js"></script>
 
 
 <!-- ////////////////////////////////////////////////
