--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/index.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Bright Sign Controller App</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
     <link rel="stylesheet" href="css/angular-material.css">
@@ -19,6 +20,7 @@
 <!-- ////////////////////////////////////////////////
     //////// LIBS -->
 <script type="text/javascript" src="scripts/jquery.min.js"></script>
+<!--<script type="text/javascript" src="scripts/angular.js"></script>-->
 <script type="text/javascript" src="scripts/angular.js"></script>
 <script type="text/javascript" src="scripts/angular-touch.js"></script>
 <script type="text/javascript" src="scripts/angular-ui-router.min.js"></script>
